remove some complicated features from design

--- a/.config
+++ b/.config
@@ -1,1 +1,8 @@
-connString=
+[regexpattern]
+
+
+[dbconnstr]
+ConnectionString = space
+
+[targeturl]
+MainPageUrl = http://weekly.manong.io/issues/
