complete stored procedures, add data provider methods

--- a/search/.config
+++ b/search/.config
@@ -1,5 +1,8 @@
 [dbconnstr]
-ConnectionString = space
+User = root
+Password = pwd
+Host = localhost
+Database = manong
 
 [targeturl]
 MainPageUrl = http://weekly.manong.io/issues/
